add tests for external code generations