@@ -5,16 +5,13 @@ import com.google.inject.Provider;
 import de.uniba.swt.dsl.common.util.BahnUtil;
 import de.uniba.swt.dsl.generator.externals.LibraryExternalGenerator;
 import de.uniba.swt.dsl.generator.externals.LowLevelCodeExternalGenerator;
+import de.uniba.swt.dsl.generator.externals.CliRuntimeExecutor;
 import org.apache.log4j.Logger;
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.xtext.diagnostics.Severity;
-import org.eclipse.xtext.generator.GeneratorContext;
-import org.eclipse.xtext.generator.GeneratorDelegate;
-import org.eclipse.xtext.generator.JavaIoFileSystemAccess;
-import org.eclipse.xtext.resource.SaveOptions;
-import org.eclipse.xtext.serializer.impl.Serializer;
+import org.eclipse.xtext.generator.*;
 import org.eclipse.xtext.util.CancelIndicator;
 import org.eclipse.xtext.validation.CheckMode;
 import org.eclipse.xtext.validation.IResourceValidator;
@@ -22,6 +19,7 @@ import org.eclipse.xtext.validation.Issue;
 
 import java.io.File;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
@@ -45,69 +43,44 @@ public class StandaloneApp {
     private GeneratorDelegate generator;
 
     @Inject
-    private JavaIoFileSystemAccess fileAccess;
-
-    @Inject
     private LowLevelCodeExternalGenerator lowLevelCodeExternalGenerator;
 
     @Inject
     private LibraryExternalGenerator libraryGenerator;
 
-    public boolean runGenerator(String filePath, String outputPath, String mode) {
-
-        // Load the resource
-        var file = new File(filePath);
-        Resource resource = loadResource(file.getAbsolutePath());
+    public boolean runGenerator(String filePath, AbstractFileSystemAccess2 fsa, String outputPath, String mode, CliRuntimeExecutor runtimeExec) {
+        var resource = loadResource(filePath);
         if (resource == null) {
             System.err.println("Invalid input file: " + filePath);
             return false;
         }
 
-        // load output
-        if (outputPath == null || outputPath.isEmpty()) {
-            outputPath = Paths.get(file.getAbsoluteFile().getParent(), "src-gen").toAbsolutePath().toString();
+        return runGenerator(resource, filePath, fsa, outputPath, mode, runtimeExec);
+    }
+
+    public boolean runGenerator(Resource resource, String filePath, AbstractFileSystemAccess2 fsa, String outputPath, String mode, CliRuntimeExecutor runtimeExec) {
+        // load
+        File file = new File(filePath);
+        var out = outputPath;
+        if (out == null || out.isEmpty()) {
+            out = Paths.get(file.getAbsoluteFile().getParent(), "src-gen").toAbsolutePath().toString();
         }
+        fsa.setOutputPath(out);
 
         // Validate the resource
-        List<Issue> list = validator.validate(resource, CheckMode.ALL, CancelIndicator.NullImpl);
-        if (!list.isEmpty()) {
-            boolean anyError = false;
-            for (Issue issue : list) {
-                if (issue.getSeverity() == Severity.ERROR) {
-                    System.err.println(issue);
-                    anyError = true;
-                } else {
-                    System.out.println(issue);
-                }
-
-            }
-
-            // stop
-            if (anyError) {
-                return false;
-            }
-        }
+        if (validateTheResource(resource))
+            return false;
 
         logger.info(String.format("Code generation mode: %s", mode));
 
         // Configure and start the generator
         logger.info("Start generating network layout and SCCharts models");
-        if (generate(resource, outputPath, mode, file.getName())) {
-            System.out.println(String.format("Code generation finished: %s", outputPath));
-            return true;
-        }
-
-        return false;
-    }
-
-    private boolean generate(Resource resource, String outputPath, String mode, String fileName) {
         // prepare
-        fileAccess.setOutputPath(outputPath);
         GeneratorContext context = new GeneratorContext();
         context.setCancelIndicator(CancelIndicator.NullImpl);
 
         // step 1: generate default artifacts
-        generator.generate(resource, fileAccess, context);
+        generator.generate(resource, fsa, context);
 
         // step 2: generate low-level C-Code and dynamic library
         boolean genLibrary = MODE_LIBRARY.equalsIgnoreCase(mode);
@@ -115,25 +88,47 @@ public class StandaloneApp {
 
         if (genLowLevelCode) {
             logger.info("Start generating low-level code");
-            if (!lowLevelCodeExternalGenerator.generate(fileAccess))
+            if (!lowLevelCodeExternalGenerator.generate(fsa, runtimeExec))
                 return false;
         }
 
         if (genLibrary) {
-            libraryGenerator.setSourceFileName(BahnUtil.getNameWithoutExtension(fileName));
+            libraryGenerator.setSourceFileName(BahnUtil.getNameWithoutExtension(file.getName()));
             logger.info("Start generating dynamic library");
-            return libraryGenerator.generate(fileAccess);
+            if (!libraryGenerator.generate(fsa, runtimeExec))
+                return false;
         }
 
+        System.out.println(String.format("Code generation finished: %s", out));
         return true;
+    }
+
+    private boolean validateTheResource(Resource resource) {
+        List<Issue> list = validator.validate(resource, CheckMode.ALL, CancelIndicator.NullImpl);
+        if (list == null || list.isEmpty())
+            return false;
+
+        boolean anyError = false;
+        for (Issue issue : list) {
+            if (issue.getSeverity() == Severity.ERROR) {
+                System.err.println(issue);
+                anyError = true;
+            } else {
+                System.out.println(issue);
+            }
+
+        }
+
+        // stop
+        return anyError;
     }
 
     private Resource loadResource(String filePath) {
         // validate
-        if (filePath == null || !Files.exists(Paths.get(filePath))) {
+        if (filePath == null || !Files.exists(Path.of(filePath)))
             return null;
-        }
 
+        // load resource
         return resourceSetProvider.get().getResource(URI.createFileURI(filePath), true);
     }
 }
